# gcodesynth

./: .gitignore  pyproject.toml  quality.sh  readme.md  tests.py
doc/development/: did_not_work.md
gcodesynth/: __init__.py  gcodecommand.py  gcodeparam.py  gcodesynth.py  gcspyaudio.py  playgcode.py  scales.py
gcodesynth/data/: scale-A440.csv
octoprint_gcodesynth/: gcodecommand.py  gcodesynth.py
octoprint_mcodesynth/: gcodecommand.py  gcodesynth.py
tests/: test_gcodesynth.py  test_scales.py
tests/data/: combine_1ms_tones.gcode  with_comments.gcode
